# minmd

./: .gitmodules  CMakeLists.txt  README.md  clang-tidy.sh  meson.build  todo.txt
config/: minmd.conf  theme.css
src/: config.cpp  config.h  file_handling.cpp  file_handling.h  file_watcher.cpp  file_watcher.h  image_widget.cpp  image_widget.h  initialize.cpp  initialize.h  inner_vbox.cpp  inner_vbox.h  main.cpp  main_grid.cpp  main_grid.h  main_label.cpp  main_label.h  main_scrolled_window.cpp  main_scrolled_window.h  main_window.cpp  main_window.h  parse.cpp  parse.h
